--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "stripe": "^14.5.0"
   },
